--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 POSTGRES_HOST=localhost
-POSTGRES_USER=postgres
+POSTGRES_USER=azizbek
 POSTGRES_DATABASE=restaurant_user
-POSTGRES_PASSWORD=00salom00
+POSTGRES_PASSWORD=123
 POSTGRES_PORT=5432
 LOGPATH=logs/info.log
 HTTP_PORT=":8080"
